fix:[pd-826] tracking event issue and scrollbar issue

--- a/src/component/SearchSuggestion/SearchSuggestion.style.scss
+++ b/src/component/SearchSuggestion/SearchSuggestion.style.scss
@@ -75,6 +75,7 @@
         max-height: calc(100vh - 100px);
         background-color: #ffffff;
         overflow-y: scroll;
+        z-index: 999;
       }
     }
   }
